# onething-clip

./: Cargo.toml  Changes.md  LICENSE.md  README.md  install.sh
.github/workflows/: ci.yml
src/: main.rs
