[package]
name = "onething-clip"
version = "0.1.9"
edition = "2021"
description = "A personal command line tool to access the OneThing global clipboard"
license = "MIT"
repository = "https://github.com/intellis-team/onething-clip"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14.0"
directories = "5.0"
reqwest = { version = "0.11.26", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
openssl = { version = "0.10.64", features = ["vendored"] }
